small-style-change

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     <title>Привет мир!</title>
   </head>
   <body>
-    <h1>
-      Hello!
-    </h1>
-
-    <h2>
-      Hello!
-    </h2>
+    <header>
+      <div class="container-md">
+        <ul>
+          <li>1</li>
+          <li>1</li>
+          <li>1</li>
+          <li>1</li>
+        </ul>
+      </div>
+    </header>
 
     <!-- Swiper Script -->
     <script src="./assets/scripts/swiper-bundle.min.js"></script>
