--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div><!-- ./main-slider-container -->
         </section>
     </main>
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe ullam ipsum ipsam blanditiis impedit quas excepturi voluptatem ratione. Perferendis consectetur aperiam velit quia quasi deleniti ex perspiciatis earum ipsum.
     <footer>
         <div class="footer">
             <div class="container">
