--- a/index.html
+++ b/index.html
@@ -464,84 +464,86 @@
                 <div class="products-slider-wrapper">
                     <div class="main-titles">
                         <span class="text-in-bg">продукция<span class="text-on-text text-white">продукция</span></span>
-                        <div class="octagon">
-                            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M34.9886 12.5442C35.4296 12.9852 35.6019 13.6281 35.4405 14.2306L31.2192 29.9846C31.0577 30.5871 30.5871 31.0577 29.9846 31.2192L14.2306 35.4405C13.6281 35.6019 12.9852 35.4296 12.5442 34.9886L1.01142 23.4558C0.570356 23.0148 0.398102 22.3719 0.559542 21.7694L4.78082 6.01537C4.94226 5.41287 5.41287 4.94226 6.01537 4.78082L21.7694 0.559542C22.3719 0.398102 23.0148 0.570356 23.4558 1.01142L34.9886 12.5442Z" fill="url(#paint0_linear_89_114)" stroke="white"/>
-                                <defs>
-                                <linearGradient id="paint0_linear_89_114" x1="14.8846" y1="-3.82351e-09" x2="21.556" y2="35.2187" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#FFEAA1"/>
-                                <stop offset="0.435417" stop-color="#FFCB12"/>
-                                <stop offset="1" stop-color="#F4A917"/>
-                                </linearGradient>
-                                </defs>
-                            </svg>                                
-                        </div><!-- ./octagon -->
                     </div><!-- ./main-titles -->
                     <div class="products-slider swiper">
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Томат.png" alt="">
+                                    <img src="./assets/images/tomat-preview.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-yellow">
-                                    <h3>Томат</h3>
-                                    <img src="./assets/images/Tomat.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-yellow">
+                                        <h3>Томат</h3>
+                                        <img src="./assets/images/Tomat.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Сметана и лук.png" alt="">
+                                    <img src="./assets/images/smetana-i-luk.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-red">
-                                    <h3 class="text-white">Сметана и Лук</h3>
-                                    <img src="./assets/images/Blue-look.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-green">
+                                        <h3 class="text-white">Сметана и Лук</h3>
+                                        <img src="./assets/images/Blue-look.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Сметана и зелень.png" alt="">
+                                    <img src="./assets/images/smetana-i-zelen.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-yellow">
-                                    <h3>Сметана и Зелень</h3>
-                                    <img src="./assets/images/Look.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-red">
+                                        <h3 class="text-white">Сметана и Зелень</h3>
+                                        <img src="./assets/images/Look.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Стейк.png" alt="">
+                                    <img src="./assets/images/steyk.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-green">
-                                    <h3 class="text-white">Стейк</h3>
-                                    <img src="./assets/images/Stake.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-green">
+                                        <h3 class="text-white">Стейк</h3>
+                                        <img src="./assets/images/Stake.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Зеленый лук.png" alt="">
+                                    <img src="./assets/images/zeleniy-luk.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-blue">
-                                    <h3>Зелёный Лук</h3>
-                                    <img src="./assets/images/Green-look.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-blue">
+                                        <h3>Зелёный Лук</h3>
+                                        <img src="./assets/images/Green-look.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Сыр.png" alt="">
+                                    <img src="./assets/images/sir.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-green">
-                                    <h3 class="text-white">Сыр</h3>
-                                    <img src="./assets/images/Cheese.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-green">
+                                        <h3 class="text-white">Сыр</h3>
+                                        <img src="./assets/images/Cheese.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="first-product-img">
-                                    <img src="./assets/images/Шашлык.png" alt="">
+                                    <img src="./assets/images/shashlik.png" alt="">
                                 </div>
-                                <div class="second-product-img bg-yellow">
-                                    <h3>Шашлык</h3>
-                                    <img src="./assets/images/Shashl.png" alt="">
-                                </div>
+                                <a href="#!">
+                                    <div class="second-product-img bg-yellow">
+                                        <h3>Шашлык</h3>
+                                        <img src="./assets/images/Shashl.png" alt="">
+                                    </div>
+                                </a>
                             </div><!-- ./swiper-slide -->
                         </div><!-- ./swiper-wrapper -->
                     </div><!-- ./swiper -->
@@ -559,14 +561,36 @@
                 </div><!-- ./products-slider-wrapper -->
             </section>
             <section>
-                <div class="main-video">
+                <div class="main-video-container">
                     <div class="container">
                         <div class="main-titles">
                             <span class="text-in-bg">видео<span class="text-on-text text-white">видео</span></span>
                         </div><!-- ./main-titles -->
                         <div class="main-video-img">
-                            <img src="./assets/images/main-video-img.png" alt="">
+                            <a href="#!" data-bs-toggle="modal" data-bs-target="#mainVideo">
+                                <img src="./assets/images/main-video-img.png" alt="">
+                            </a>
                         </div>
+                        <div class="modal main-video-modal" 
+                            id="mainVideo"
+                            tabindex="-1" 
+                            aria-hidden="true">
+
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <a class="video-close-btn" href="#!">
+                                        <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg" data-bs-dismiss="modal" aria-label="Close">
+                                            <rect width="56" height="56" rx="28" fill="#FFF212"/>
+                                            <path d="M34 22L22 34" stroke="#101010" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M22 22L34 34" stroke="#101010" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </a>
+                                    <div class="main-video">
+                                        <iframe width="100%" height="513" src="https://www.youtube.com/embed/FaY8AzomFfM?autoplay=1&mute=1&controls=1"></iframe>
+                                    </div>
+                                </div><!-- ./modal-content -->
+                            </div><!-- ./modal-dialog -->
+                        </div><!-- ./modal -->
                         <div class="all-product-link">
                             <a href="#" class="link-btn bg-yellow">
                                 Смотреть больше видео
