add-product-info-page

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                     <div class="product-btn-prev"></div>
                     <div class="product-btn-next"></div>
                     <div class="all-product-link">
-                        <a href="#" class="link-btn bg-yellow">
+                        <a href="products.html" class="link-btn bg-yellow">
                             Вся продукция
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M17 7L7 17" stroke="#101010" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -738,14 +738,14 @@
         </footer>
     </div>
 
-    <!-- Swiper Script -->
-    <script src="./assets/scripts/swiper-bundle.min.js"></script>
-    <!-- jQuery -->
+	<!-- jQuery -->
     <script src="./assets/scripts/jquery-3.6.0.min.js"></script>
-    <!-- Bootstrap & Popper -->
+	<!-- Swiper Script -->
+    <script src="./assets/scripts/swiper-bundle.min.js"></script>
+	<!-- Bootstrap & Popper -->
     <script src="./assets/scripts/bootstrap.min.js"></script>
     <!-- Script -->
     <script src="./assets/scripts/script.js"></script>
-
+	
   </body>
 </html>
