add-table-add-another-little-fix

--- a/distribution.html
+++ b/distribution.html
@@ -173,54 +173,210 @@
                                   aria-selected="false">Туркменистан</button>
                                 </li>
                             </ul><!-- ./nav -->
+                        </div><!-- ./products-tabs -->  
+                    </div><!-- ./container -->  
                             <div class="tab-content">
                                 <div class="tab-pane fade show active" id="uzbek" role="tabpanel" aria-labelledby="uzbek-tab">
-                                    <table class="table table-striped">
-                                        <thead>
-                                          <tr>
-                                            <th scope="col">#</th>
-                                            <th scope="col">First</th>
-                                            <th scope="col">Last</th>
-                                            <th scope="col">Handle</th>
-                                            <th scope="col">4</th>
-                                          </tr>
-                                        </thead>
-                                        <tbody>
-                                          <tr>
-                                            <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
-                                            <td>4</td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row">2</th>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
-                                            <td>4</td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>3</td>
-                                            <td>4</td>
-                                          </tr>
-                                        </tbody>
-                                    </table>
+                                    <div class="table-container">
+                                        <table class="table table-striped">
+                                            <thead>
+                                              <tr>
+                                                <th scope="col">Дистрибьютор</th>
+                                                <th scope="col">Юридический адрес</th>
+                                                <th scope="col">Ответственное лицо</th>
+                                                <th scope="col">Номер телефона</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <td>Tashkent</td>
+                                                <td>OOO "SNACK PREMIUM"</td>
+                                                <td>Sobir</td>
+                                                <td>+998 (93) 640-88-23</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Chirchik</td>
+                                                <td>ООО "Sarvar Chirchik Savdo"</td>
+                                                <td>Sarvar</td>
+                                                <td>+998 (90) 972-22-32</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Olmalyk</td>
+                                                <td>ChF "Liga"</td>
+                                                <td>Oksana</td>
+                                                <td>+998 (93) 188-58-04</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Bekabad</td>
+                                                <td>ООО "Bekobod Pavilion Savdo" </td>
+                                                <td>A.Rahimov</td>
+                                                <td>+998 (90) 345-87-00</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Syrdrya </td>
+                                                <td>ООО "ARTF SYSTEM"</td>
+                                                <td>Abdurasul</td>
+                                                <td>+998 (98) 177-00-02</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Andijan</td>
+                                                <td>ChP "Inter And"</td>
+                                                <td>Abdunosir</td>
+                                                <td>+998 (90) 770-55-51</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Namangan</td>
+                                                <td>ООО "Salqin Ichimliklar Savdosi"</td>
+                                                <td>Elyorbek</td>
+                                                <td>+998 (97) 374-91-11</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Kokand</td>
+                                                <td>ChP "Shams Trade Kokand"</td>
+                                                <td>G’olibjon</td>
+                                                <td>+998 (99) 090-90-79</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Fergana-1</td>
+                                                <td>ChP "Ilg’or Savdo Invest"</td>
+                                                <td>Muhammaddiyor </td>
+                                                <td>+998 (97) 334-33-30</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Fergana-2</td>
+                                                <td>ООО "Valley Excellent"</td>
+                                                <td>Ihtiyor</td>
+                                                <td>+998 (98) 000-56-78</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Samarkand</td>
+                                                <td>ООО "Modern Snac Product"</td>
+                                                <td>Bakhodir</td>
+                                                <td>+998 (97) 914-44-49</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Karshi</td>
+                                                <td>ООО "Aziza Savdo Marketing"</td>
+                                                <td>Abdugani</td>
+                                                <td>+998 (93) 380-18-38</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Shakhrisabz</td>
+                                                <td>OOO "Smart Said"</td>
+                                                <td>Yashin</td>
+                                                <td>+998 (91) 455-44-40</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Djizzak</td>
+                                                <td>OOO "Shohsanam Savdo Invest"</td>
+                                                <td>Elshod</td>
+                                                <td>+998 (98) 561-50-10</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Bukhara</td>
+                                                <td>ООО "Royal Star Distribution"</td>
+                                                <td>Ulugbek</td>
+                                                <td>+998 (93) 399-62-02</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Navai</td>
+                                                <td>ООО "Era Navoiy Trading"</td>
+                                                <td>Aleksandr</td>
+                                                <td>+998 (90) 175-86-75</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Zarafshan</td>
+                                                <td>ChMP "Utkir"</td>
+                                                <td>Feruz</td>
+                                                <td>+998 (91) 331-90-00</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Termez</td>
+                                                <td>ChF "Qaynov Gavxari"</td>
+                                                <td>Orif</td>
+                                                <td>+998 (97) 242-73-40</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Denau</td>
+                                                <td>ООО "Denov Mazzali Suvlari"</td>
+                                                <td>Abdusalim</td>
+                                                <td>+998 (90) 128-36-77</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Nukus</td>
+                                                <td>ООО "Silverberry"</td>
+                                                <td>Jasur</td>
+                                                <td>+998 (99) 955-61-11</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Turtkul</td>
+                                                <td>ООО "Turtkul Agro Invest"</td>
+                                                <td>Kudrat</td>
+                                                <td>+998 (97) 505-87-70</td>
+                                              </tr>
+                                              <tr>
+                                                <td>Khoresm</td>
+                                                <td>ООО "Sevimli Sharbatlar"</td>
+                                                <td>Uktam</td>
+                                                <td>+998 (97) 511-35-55</td>
+                                              </tr>
+                                            </tbody>
+                                        </table>
+                                    </div> 
                                 </div>
                                 <div class="tab-pane fade" id="kazah" role="tabpanel" aria-labelledby="kazah-tab">
-                                    2
+                                    <div class="table-container">
+                                        <table class="table table-striped">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col">Дистрибьютор</th>
+                                                <th scope="col">Юридический адрес</th>
+                                                <th scope="col">Ответственное лицо</th>
+                                                <th scope="col">Номер телефона</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Almaty</td>
+                                                    <td>TOO Sab Import (Toimart)</td>
+                                                    <td>Elmira</td>
+                                                    <td>+7 701 972-71-35</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Shimkent</td>
+                                                    <td>TOO Ermak</td>
+                                                    <td>Hurshid</td>
+                                                    <td>+998 (99) 847-22-20</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                                 <div class="tab-pane fade" id="turk" role="tabpanel" aria-labelledby="turk-tab">
-                                    3
+                                    <div class="table-container">
+                                        <table class="table table-striped">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col">Дистрибьютор</th>
+                                                <th scope="col">Юридический адрес</th>
+                                                <th scope="col">Ответственное лицо</th>
+                                                <th scope="col">Номер телефона</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Туркменистан</td>
+                                                    <td>Flamingo</td>
+                                                    <td>Guvanch</td>
+                                                    <td>+99 (36) 581-94-54</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
-                        </div><!-- ./products-tabs -->
-                    </div>
                 </section>
-            </div>
+            </div><!-- ./distribution -->
         </main>
 
         <footer>
