--- a/product-info-page.html
+++ b/product-info-page.html
@@ -129,12 +129,12 @@
                             <span class="text-in-bg">сметана и зелень<span class="text-on-text text-white">сметана и зелень</span></span>
                         </div><!-- ./main-titles -->
                         <div class="product-info">
-                            <div class="col-lg-6 col-12 order-lg-first order-last">
+                            <div class="product-info__item order-lg-first order-last">
                                 <div class="product-info__img">
                                     <img src="./assets/images/big-zmet-luk.png" alt="">
                                 </div>
                             </div><!-- ./col-lg-6 -->
-                            <div class="col-lg-6 col-12 order-lg-last order-first">
+                            <div class="product-info__item order-lg-last order-first">
                                 <ul class="nav nav-pills" role="tablist">
                                     <li class="nav-item" role="presentation">
                                         <button class="nav-link active" id="small-weight-tab" data-bs-toggle="pill" data-bs-target="#small-weight" type="button" role="tab" aria-controls="small-weight" aria-selected="true"><span class="product-weight-mobile">Маленькая —</span> 30 гр.</button>
@@ -164,7 +164,7 @@
                                         <div id="collapseProductInfoStructure" class="accordion-collapse collapse" aria-labelledby="headerProductInfoStructure" data-bs-parent="#productInfoStructure">
                                             <div class="accordion-body">
                                                 Картофельные хлопья, крахмал кукурузный, пшеничная мука, масло растительное (подсолнеч-ное), пищевая вкусоароматическая добавка «Сыр» [соль, сухая молочная сыворотка, мальтодекстрин,ароматизатор «Сыр», усилители вкуса и аромата (глутамат натрия 1-замещённый, 5’-рибонуклеотиды
-                                                натрия 2-замещённые, мальтол), декстроза, сыр сухой (сыр, эмульгатор орто-фосфат натрия 2-замещённый), регулятор кислотности (молочная кислота), краситель (экстракт паприки), антислеживатель (диоксид кремния)], сахар, разрыхлитель гидрокарбонат натрия), пищевой эмульгатор (соевый лецитин), антиокислители (токоферолы, лимонная кислота). Продукт может содержать незначительное количество сельдерея"                                        
+                                                натрия 2-замещённые, мальтол), декстроза, сыр сухой (сыр, эмульгатор орто-фосфат натрия 2-замещённый), регулятор кислотности (молочная кислота), краситель (экстракт паприки), антислеживатель (диоксид кремния)], сахар, разрыхлитель гидрокарбонат натрия), пищевой эмульгатор (соевый лецитин), антиокислители (токоферолы, лимонная кислота). Продукт может содержать незначительное количество сельдерея"  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni optio vero libero itaque fugit sint quae aliquam, earum dolores perferendis labore aspernatur, culpa excepturi accusantium ratione quos! Sint, fugiat cum.                                      
                                             </div>
                                     </div>
                                 </div>
