--- a/distribution.html
+++ b/distribution.html
@@ -179,7 +179,7 @@
                                 <div class="tab-pane fade show active" id="uzbek" role="tabpanel" aria-labelledby="uzbek-tab">
                                     <div class="table-container">
                                         <div class="table-wrapper">
-                                            <table class="table table-striped">
+                                            <table class="table">
                                                 <thead>
                                                   <tr>
                                                     <th scope="col">Дистрибьютор</th>
@@ -189,12 +189,12 @@
                                                   </tr>
                                                 </thead>
                                                 <tbody>
-                                                  <tr>
-                                                    <td>Tashkent</td>
-                                                    <td>OOO "SNACK PREMIUM"</td>
-                                                    <td>Sobir</td>
-                                                    <td>+998 (93) 640-88-23</td>
-                                                  </tr>
+                                                    <tr id="test" href="#">
+                                                        <td>Tashkent</td>
+                                                        <td>OOO "SNACK PREMIUM"</td>
+                                                        <td>Sobir</td>
+                                                        <td>+998 (93) 640-88-23</td>
+                                                    </tr>
                                                   <tr>
                                                     <td>Chirchik</td>
                                                     <td>ООО "Sarvar Chirchik Savdo"</td>
@@ -459,6 +459,7 @@
     <script src="./assets/scripts/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap & Popper -->
     <script src="./assets/scripts/bootstrap.min.js"></script>
+    <script src="./assets/scripts/jquery.cookie.js"></script>
     <!-- Script -->
     <script src="./assets/scripts/script.js"></script>
 
