--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide bg-green">
                                 <div class="main-slider-text">
-                                    <div class="main-slider-title">
+                                    <div class="main-slider-title d-none">
                                         <h1 class="text-white">
                                             Придай <svg width="43" height="45" viewBox="0 0 43 45" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M26.731 30.8791C25.4143 29.5471 25.1496 28.5464 27.0624 27.5676C29.5734 26.2813 33.3478 27.9273 30.6277 30.3886C29.6624 31.2628 27.8275 31.337 26.731 30.8791ZM30.2785 15.8037C28.2189 13.4078 33.6725 11.3498 35.3606 13.338C36.9442 15.202 33.052 18.1691 30.2785 15.8037ZM0.0681003 34.3542C-0.327795 39.7369 0.897708 42.9199 6.52476 44.3631C17.741 47.1733 34.1996 40.4411 36.5327 28.9585C36.8574 27.3561 37.2756 25.4049 34.6467 23.7873C30.681 22.4988 27.9387 24.1077 26.037 23.5976C23.7996 22.9959 24.5224 20.2489 26.5731 20.589C30.3852 21.2235 33.9972 21.4458 37.9806 18.5485C42.2065 15.4745 44.8888 8.06433 41.3835 3.70194C36.9353 -1.53249 26.7065 -0.409738 21.0661 2.14317C9.49175 7.51495 1.04005 22.1086 0.0681003 34.3564V34.3542Z" fill="white"/>
@@ -139,6 +139,21 @@
                                             </svg>мент<svg width="53" height="49" viewBox="0 0 53 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M29.4352 35.2106L51.1996 13.0091C53.6001 10.5604 53.6001 6.58667 51.1996 4.13799C48.0873 0.963103 43.0438 0.963103 39.9314 4.13799C38.254 5.84912 37.413 8.23198 37.6311 10.6398L38.5677 20.8998C38.6745 22.064 37.2061 22.8061 36.4853 21.8983L22.3339 4.13345C17.7398 -1.63309 8.82982 -1.11793 3.67736 4.13799C3.52831 4.29004 2.4849 5.52232 2.14007 6.02613C-1.29267 11.0619 -0.351613 18.2332 3.22796 23.1646C4.22464 24.5399 5.95547 25.1345 7.56617 24.6602C10.534 23.7842 11.4572 19.9557 9.22361 17.7748L3.52164 12.158C3.11229 11.7586 2.86089 11.2185 2.81417 10.6421C2.63842 8.44757 5.23912 7.21983 6.76528 8.77664L26.4274 32.1514C27.2372 32.9775 26.5898 34.3868 25.4485 34.2779L15.395 33.3224C13.0346 33.0978 10.6986 33.9579 9.02115 35.669C5.90876 38.8439 5.90876 43.9886 9.02115 47.1635C11.4216 49.6122 15.3171 49.6122 17.7176 47.1635L29.4307 35.2151L29.4352 35.2106Z" fill="white"/>
                                             </svg><br> с <span class="text-in-bg">новым<span class="text-on-text text-white">новым</span></span> Cheers
+                                        </h1>
+                                    </div><!-- /.main-slider-title -->
+                                    <div class="main-slider-title">
+                                        <h1 class="text-white">
+                                            <svg class="mb-3 mx-1" width="43" height="55" viewBox="0 0 43 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M30.7722 26.8928C31.3582 26.0925 32.0063 25.3449 32.7095 24.6574C27.5816 20.7204 23.9533 11.1738 23.9151 0H43V27.5V55H23.9151C23.9533 43.8262 27.5816 34.2796 32.7095 30.3426C32.0051 29.6551 31.357 28.9075 30.7722 28.1072C28.2991 30.2826 25.0535 31.6002 21.4994 31.6002C17.9453 31.6002 14.6985 30.2826 12.2266 28.1072C11.6406 28.9075 10.9937 29.6551 10.2893 30.3426C15.4184 34.2796 19.0455 43.8262 19.0837 55H0V27.5V0H19.0837C19.0455 11.1738 15.4184 20.7204 10.2893 24.6574C10.9937 25.3449 11.6406 26.0925 12.2266 26.8928C14.6997 24.7174 17.9453 23.3998 21.4994 23.3998C25.0535 23.3998 28.3003 24.7174 30.7722 26.8928Z" fill="white"/>
+                                            </svg>ar lah<svg width="47" height="40" viewBox="0 0 47 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M2.99937 39.9903L39.6682 40C43.7164 40 46.9902 36.7589 47 32.7511C47 27.5594 42.7558 23.3576 37.5118 23.3576C34.6888 23.3576 32.0129 24.5997 30.2094 26.754L22.5247 35.9243C21.6523 36.9626 19.8096 36.3513 19.9468 35.0024L27.9844 23.4352L44.2849 0.00970403H44.0006L7.3318 0C3.28363 0 0.00980188 3.24114 0 7.24891C0 12.4406 4.24421 16.6424 9.48822 16.6521C12.3112 16.6521 14.9871 15.41 16.7906 13.2557L24.4753 4.0854C25.3477 3.04706 27.1904 3.65842 27.0532 5.00728L19.0058 16.5745L2.70532 40H2.98957L2.99937 39.9903Z" fill="white"/>
+                                            </svg>aga
+                                            <br>
+                                            ta`m <svg class="mb-1" width="43" height="45" viewBox="0 0 43 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M26.731 30.8791C25.4143 29.5471 25.1496 28.5464 27.0624 27.5676C29.5734 26.2813 33.3478 27.9273 30.6277 30.3886C29.6624 31.2628 27.8275 31.337 26.731 30.8791ZM30.2785 15.8037C28.2189 13.4078 33.6725 11.3498 35.3606 13.338C36.9442 15.202 33.052 18.1691 30.2785 15.8037ZM0.0681003 34.3542C-0.327795 39.7369 0.897708 42.9199 6.52476 44.3631C17.741 47.1733 34.1996 40.4411 36.5327 28.9585C36.8574 27.3561 37.2756 25.4049 34.6467 23.7873C30.681 22.4988 27.9387 24.1077 26.037 23.5976C23.7996 22.9959 24.5224 20.2489 26.5731 20.589C30.3852 21.2235 33.9972 21.4458 37.9806 18.5485C42.2065 15.4745 44.8888 8.06433 41.3835 3.70194C36.9353 -1.53249 26.7065 -0.409738 21.0661 2.14317C9.49175 7.51495 1.04005 22.1086 0.0681003 34.3564V34.3542Z" fill="white"/>
+                                            </svg>er
+                                            <br>
+                                            <span class="text-in-bg">Yangi<span class="text-on-text text-white">yangi</span></span> Cheers
                                         </h1>
                                     </div><!-- /.main-slider-title -->
                                     <div class="main-slider-links">
