change-cursor-on-hover-and-bottom-border-on-table

--- a/distribution.html
+++ b/distribution.html
@@ -179,7 +179,7 @@
                                 <div class="tab-pane fade show active" id="uzbek" role="tabpanel" aria-labelledby="uzbek-tab">
                                     <div class="table-container">
                                         <div class="table-wrapper">
-                                            <table class="table">
+                                            <table class="table table-striped">
                                                 <thead>
                                                   <tr>
                                                     <th scope="col">Дистрибьютор</th>
